# mephi_homework_tasks

./: .gitignore  LICENSE  README.md  pyproject.toml
homework_tasks/: __init__.py
homework_tasks/ab_course/: __init__.py
homework_tasks/ab_course/homework01/: Homework_modul_1.ipynb  __init__.py
homework_tasks/ab_course/homework02/: Homework_with_answers_modul_2.ipynb  __init__.py
homework_tasks/linear_algebra/: __init__.py
homework_tasks/ml/: __init__.py  classic_gradient_descent.ipynb  linear_regression_problem.ipynb  newton_polynomial_root.py  sgd_diamonds.py
homework_tasks/probability_theory/: SGA_unit6_NBC.ipynb  __init__.py
homework_tasks/programming_in_python/: __init__.py
homework_tasks/programming_in_python/homework_module_4/: __init__.py  analysis.py
homework_tasks/programming_in_python/homework_module_5/: __init__.py  analysis.py
homework_tasks/programming_in_python/homework_module_7/: __init__.py  analysis.py
homework_tasks/programming_in_python/homework_module_pandas/: __init__.py  melb_dataset_processing.ipynb
homework_tasks/special_sections_of_mathematical_statistics/: ANOVA_homework_template.ipynb  __init__.py
homework_tasks/special_sections_of_mathematical_statistics/homework01/: ANOVA_homework_template.ipynb  __init__.py
homework_tasks/special_sections_of_mathematical_statistics/homework02/: __init__.py  corr_reg_homework.ipynb
homework_tasks/statistics/: __init__.py  calculating_diff_function.py  function_research.py  gradient_descent_multivariate_with_plot.py  lagrange_optimization_method.py  max_profit_task.py  operations_with_sets.py  points_of_intersection.py  rosenbrock_gradient.py
homework_tasks/utils/: __init__.py
mephi_homework_tasks/: __init__.py
mephi_homework_tasks/linear_algebra/: __init__.py
mephi_homework_tasks/ml/: __init__.py
mephi_homework_tasks/statistics/: __init__.py
mephi_homework_tasks/utils/: __init__.py
sessions_tasks/: __init__.py
sessions_tasks/ab_course/: __init__.py
sessions_tasks/ab_course/session01/: Homework_itog.ipynb  __init__.py
sessions_tasks/additional_chapters_higher_mathematics/: __init__.py
sessions_tasks/additional_chapters_higher_mathematics/session01/: __init__.py  from_decision_tree_to_ensemble_and_clustering.ipynb
sessions_tasks/math_analysis/: __init__.py
sessions_tasks/math_analysis/homework_tasks_1/: __init__.py  task1_extrema_3var.py  task2_conditional_extrema_lagrange.py  task_3_regression.py
sessions_tasks/math_analysis/homework_tasks_2/: __init__.py  mathematical_analysis_and_probability_theory_homework_2_HW.ipynb
sessions_tasks/math_analysis/session01/: __init__.py  task01_derivatives.md  task02_extrema.md  task03_conditional_extremum.md  task04_naive_bayes.py  task05_newton_optimization.py  task06_probability_distribution.py  task07_poisson_calls.py
sessions_tasks/programming_in_python/: __init__.py
sessions_tasks/programming_in_python/session01/: __init__.py  task01_reverse_blocks_text.py  task02_string_compress.py  task03_brackets_validation.py  task04_password_generator.py  task05_almost_palindrome.py  task06_schrodinger_eraser.py
sessions_tasks/programming_in_python/session01/input/: task01_input.txt
sessions_tasks/programming_in_python/session01/output/: task01_output.txt  task06_output.txt
sessions_tasks/programming_in_python/session02/: __init__.py  data_analysis_final_project.ipynb
sessions_tasks/project_practice/: __init__.py
sessions_tasks/project_practice/semester01/: __init__.py
sessions_tasks/project_practice/semester01/UrbanEcoSoundMonitor/: README.md  __init__.py  generate_test_audio.py  requirements.txt  run_project.py  streamlit_app.py  urban_ecosystem_sound_monitoring.ipynb
tests/: test_smoke.py
tests/sessions_tasks/programming_in_python/session01/: test_task01_reverse_blocks_text.py  test_task02_string_compress.py  test_task03_brackets_validation.py  test_task04_password_generator.py  test_task05_almost_palindrome.py  test_task06_schrodinger_eraser.py
