[tool.poetry]
# Имя проекта (по нему можно будет импортировать как пакет)
name = "mephi-homework-tasks"
# Версия проекта
version = "0.1.0"
description = "Решения домашних и сессионных заданий НИЯУ МИФИ по прикладному анализу данных и ML"
authors = ["IgorPont <pontigor11@gmail.com>"]
readme = "README.md"
# Директории-пакеты, которые входят в проект
packages = [
    { include = "homework_tasks" },
    { include = "sessions_tasks" }
]

# Основные зависимости (будут устанавливаться всегда)
[tool.poetry.dependencies]
# Совместимая версия Python
# Важно: ограничиваемся 3.13–3.14, чтобы быть совместимыми с torch/torchaudio/triton
# triton поддерживает Python <3.15, поэтому нельзя заявлять "^3.13" как <4.0
python = ">=3.13,<3.15"

# Работа с массивами
numpy = "^2.1.1"
# Таблицы (DataFrame), работа с данными
pandas = "^2.2.3"
# Алгоритмы машинного обучения
scikit-learn = "^1.5.2"
# Визуализация (графики, диаграммы)
matplotlib = "^3.9.2"

# Опциональные зависимости (для работы в Jupyter)
# Удобная среда для ноутбуков
jupyterlab = { version = "^4.2.5", optional = true }
# Ядро Python для запуска в Jupyter
ipykernel = { version = "^6.29.5", optional = true }

# Для работы с математическими выражениями как с формулами
sympy = "^1.14.0"
# Продвинутые статистические визуализации
seaborn = "^0.13.2"
# Для интерактивных графиков
plotly = "^6.4.0"
# Классический интерфейс Jupyter Notebook (если удобнее, чем JupyterLab)
notebook = "^7.5.0"
# Статистические модели (регрессии, ARIMA)
statsmodels = "^0.14.6"
# Дополнительные статистические тесты и метрики (ANOVA, корреляции)
pingouin = "^0.5.5"

# Работа со звуком и аудио-сигналами (speech/ML по звуку)
# speechbrain построен поверх PyTorch и подтягивает нужные компоненты для обработки речи
speechbrain = "^1.0.3"
# Аудио-библиотека PyTorch (чтение/преобразование аудио, спектрограммы)
# Тянет за собой torch и triton
torchaudio = "^2.9.1"

# Веб-интерфейс для интерактивных демо и дашбордов
# Используется для Streamlit-приложений (мониторинг экосистемы/аудиодемо)
streamlit = "^1.52.1"

# Библиотека HuggingFace для работы с предобученными моделями:
# NLP, аудио, визуальные модели, мультимодальные модели
transformers = ">=4.45.0,<5.0.0"

# Библиотека для анализа аудиосигналов (частоты, спектрограммы, MFCC, Chroma)
# Часто используется вместе с torchaudio, удобна для feature extraction
librosa = ">=0.10.0,<0.11.0"

[tool.poetry.extras]
# Группа "notebooks" (ставится командой "poetry install -E notebooks")
notebooks = ["jupyterlab", "ipykernel", "notebook"]

[tool.poetry.group.dev.dependencies]
# Зависимости для разработки
# Быстрый линтер (заменяет flake8 + isort + часть pylint)
ruff = "^0.6.9"
# Автоформаттер кода
black = "^24.10.0"
# Тестовый фреймворк
pytest = "^8.3.3"
# Автодополнения pandas
pandas-stubs = "^2.3.2.250926"

[build-system]
# Как собирать проект (Poetry Core отвечает за упаковку)
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# Ruff (линтер + isort)
[tool.ruff]
# Максимальная длина строки
line-length = 120
# Целевая версия Python
target-version = "py313"
# Автоматически исправлять ошибки (где можно)
fix = true

[tool.ruff.lint]
# Включаем категории правил:
# - E, W, F = стандартные ошибки/варнинги (pycodestyle + pyflakes)
# - I = сортировка импортов (isort)
# - UP = устаревшие конструкции
# - B = best practices (flake8-bugbear)
# - C4, SIM = оптимизация кода, упрощения
# - RUF = специфические проверки Ruff
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

# Игнорируем правила, которые конфликтуют с Black
ignore = ["E203", "E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
# Настройка сортировки импортов (isort)
# Мой проект
known-first-party = ["homework_tasks", "sessions_tasks"]
# объединять "import x as y" в одну строку
combine-as-imports = true

# Black (форматтер)
[tool.black]
# Длина строки (синхронизирована с Ruff)
line-length = 120
# Форматируем под Python 3.13
target-version = ["py313"]

# Pytest
[tool.pytest.ini_options]
# Тихий режим вывода (только статусы тестов)
addopts = "-q"
# Искать тесты в папке tests/
testpaths = ["tests"]
